[package]
name = "hilbert-curve-rust"
description = "Basic Hilbert curve algorithm"
version = "0.1.2"
edition = "2021"
authors = ["Patrick Desjardins <mrdesjardins@gmail.com>"]
homepage = "https://github.com/MrDesjardins/hilbert-curve-rust"
repository = "https://github.com/MrDesjardins/hilbert-curve-rust"
license = "MIT OR Apache-2.0"
keywords = ["hilbert", "hilbert-curve"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
hilbert = "0.1.1"
hilbert_2d = "1.0.0"
hilbert_curve = "0.2.0"
fast_hilbert = "1.0.1"

[[bench]]
name = "benchmark"
harness = false
